
package modelo.personas;

import java.time.LocalDate;
import java.util.List;
import java.util.ArrayList;

import modelo.abstractas.Empleado;
import modelo.enums.Turno;
import servicios.Formato;

public class Enfermero extends Empleado {
    
    private Turno turno; // Dependencia con Turno
    private String areaAsignada;
    private List<Paciente> pacientesACargo; // Asociación con Paciente
  
    // Constructor
    public Enfermero(String id, String nombre, String apellido, 
            LocalDate fechaNacimiento, String email, String legajo, 
            LocalDate fechaContratacion, double salarioBase, Turno turno,
            String areaAsignada) {
        
        super(id, nombre, apellido, fechaNacimiento, email, legajo, fechaContratacion, salarioBase);
        setTurno(turno);
        setAreaAsignada(areaAsignada);
        this.pacientesACargo = new ArrayList<>();
    }
    
    // — Getters —
    public Turno getTurno(){ return turno; }
    public String getAreaAsignada(){ return areaAsignada; }
    public List<Paciente> getPacientesACargo(){ return new ArrayList<>(pacientesACargo); }
    
    // — Setters con validación —
    public void setTurno(Turno turno){
        if (turno == null){
            throw new IllegalArgumentException("El turno no puede ser nulo. Use el enum Turno.");
        }
        this.turno = turno;
    }
    
    public void setAreaAsignada(String areaAsignada){
        if (areaAsignada == null || areaAsignada.isBlank()){
            throw new IllegalArgumentException("El area asignada no puede estar vacia.");
        }
        this.areaAsignada = areaAsignada.trim();
    }
    
    public void setPacienteACargo(Paciente paciente){
        if (paciente == null){
            throw new IllegalArgumentException("El paciente no puede estar vacio.");
        }
        if (!pacientesACargo.contains(paciente)){
            this.pacientesACargo.add(paciente);
        }
    }
    
    // — Otros métodos —
    public void asistirCirugia(Cirujano cirujano, Paciente paciente){
        if (cirujano == null || paciente == null){
            throw new IllegalArgumentException("Cirujano y paciente son obligatorios.");
        }
        System.out.println("Enf. " + getNombreCompleto()
                + " asiste al Dr. " + cirujano.getNombreCompleto()
                + " en la cirugia de " + paciente.getNombreCompleto());
        if (!pacientesACargo.contains(paciente)) {
            pacientesACargo.add(paciente);
        }
    }
    
    // — Métodos abstractos Heredados —
    
    /*
       calcularSalario() para Enfermero:
       El recargo se obtiene directamente del enum Turno mas bono de 5% por antiguedad
    */
    @Override
    public double calcularSalario() {
        double recargo = getSalarioBase() * turno.getRecargoSalarial() + (getSalarioBase() * 0.05 * antiguedad());
        return getSalarioBase() + recargo;
    }

    @Override
    public String obtenerTipo() { return "Enfermero";}
    
    @Override
    public String toString(){
        return obtenerTipo() + " | " + "(ID: " + getId() + ")" + "\n"
                         + "Nombre            : " + getNombre() + "\n"
                         + "Apellido          : " + getApellido() + "\n"
                         + "FechaNac          : " + getFechaNacimiento() + "\n"
                         + "Email             : " + getEmail() + "\n"
                         + "Legajo            : " + getLegajo() + "\n"
                         + "FechaContratacion : " + getFechaContratacion() + "\n"
                         + "Antiguedad        : " + antiguedad() + " anos" + "\n"
                         + "Salario base      : " + Formato.mostrarUnidades(getSalarioBase()) + "\n"
                         + "Turno             : " + getTurno() + "\n"
                         + "Area Asignada     : " + getAreaAsignada() + "\n"
                         + "Pacientes A Cargo : " + getPacientesACargo().size();
    }
    
}
