
package principal;

import servicios.LogicaYMenus;

public class SistemaHospitalDemo {
    
    public static void main(String[] args) {
        
        // Por aquí se inicia el programa  
        LogicaYMenus.menuPrincipal();
    }
    
}